--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -132,7 +132,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/13/n10214702.md#1" target="_blank">中共淫乱的前生今世（1）马列斯毛</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/7/20/n9444375.md#1" target="_blank">《观察家》：法轮功修炼者的非凡勇气和坚韧</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/26/n10742140.md#1" target="_blank">韩丽明：麻雀的哀歌</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/11/28/n8535217.md#1" target="_blank">年轻秘书长年病号 幸遇法轮大法无药而愈</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
